src/scss/Pico.scss
#p8_frame_0 {
  max-width: 800px;
  max-height: 800px;
  margin: auto;
}

#p8_frame {
  display: flex;
  width: 100%;
  max-width: 100vw;
  height: 100vw;
  max-height: 100vw;
}

#p8_menu_buttons_touch {
  position: absolute;
  width: 100%;
  z-index: 10;
  left: 0px;
}

#p8b_full {
  float: left;
  margin-left: 10px;
}

#p8b_sound {
  float: left;
  margin-left: 10px;
}

.p8_menu_button {
  opacity: 0.3;
  padding: 4px;
  display: table;
  width: 24px;
  height: 24px;
  float: right;
}

@media screen and (min-width: 512px) {
  .p8_menu_button {
    width: 24px;
    margin-left: 12px;
    margin-bottom: 8px;
  }
}
.p8_menu_button:hover {
  opacity: 1;
  cursor: pointer;
}

#touch_controls_background + div {
  justify-content: center; /* centers horizontally */
  align-items: start; /* centers vertically */
  height: 90svh!important;
}

canvas {
  image-rendering: optimizeSpeed;
  image-rendering: -moz-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: optimize-contrast;
  image-rendering: pixelated;
  -ms-interpolation-mode: nearest-neighbor;
  border: 0px;
  cursor: none;
  // max-width: 800px;
  width: 90svw;
  margin: 0;
  padding: 0;
}

.p8_start_button {
  cursor: pointer;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.button_gfx {
  stroke-width: 2;
  stroke: #ffffff;
  stroke-opacity: 0.4;
  fill-opacity: 0.2;
  fill: black;
}

.button_gfx_icon {
  stroke-width: 3;
  stroke: #909090;
  stroke-opacity: 0.7;
  fill: none;
}

#codo_textarea {
  display: none;
  position: absolute;
  left: -9999px;
  height: 0px;
  overflow: hidden;
}

#touch_controls_gfx {
  top: -20svh;
}

#controls_left_panel {
  width: 60vw;
  left: -10svh;
  top: calc(15svh + 100svw);
}

#controls_right_panel {
  width: 50vw;
  right: 0;
  top: calc(15svh + 100svw);
}

